# wasm_app

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LEPTOS_EXPLAINED.md  LICENSE  Makefile  README.md  SMART_POINTERS_GUIDE.md  THREAD_SAFE_POINTERS_GUIDE.md  TODO_REFACTORING.md  docker-compose.yml  package.json  staticwebapp.config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  build.yml  deploy-azure.yml  publish-npm.yml  security.yml
examples/: fold.rs  simple.rs
src/: app.rs  lib.rs  main.rs  state.rs
src/components/: cmaes_handlers.rs  cmaes_helpers.rs  cmaes_optimizer.rs  cmaes_state.rs  cmaes_ui.rs  mod.rs  objectives.rs
src/components/core/: mod.rs  signals.rs  types.rs
src/components/ui/: config_section.rs  controls_section.rs  mod.rs  number_input.rs  parameters_section.rs  render_helpers.rs  select_field.rs  stats_section.rs  status_section.rs
style/: main.css
tests/: integration_tests.rs
www/: index.html
